--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,6 +29,9 @@ jobs:
         uses: docker/metadata-action@v5
         with:
           images: segersniels/about
+          tags: |
+            # set latest tag for master branch
+            type=raw,value=latest,enable=${{ github.ref == format('refs/heads/{0}', 'master') }}
       - name: Build and push Docker image
         uses: docker/build-push-action@v5
         with:
